# nextpnr

./: .gitignore  CMakeLists.txt
common/kernel/: CMakeLists.txt  command.cc
ecp5/: CMakeLists.txt  arch_pybindingsng.cc
generic/: CMakeLists.txt
gui/: pythontab.cc
himbaechel/: CMakeLists.txt  arch_pybindingsng.cc
ice40/: CMakeLists.txt
machxo2/: CMakeLists.txt  arch_pybindingsng.cc
mistral/: CMakeLists.txt
nexus/: CMakeLists.txt
python/: CMakeLists.txt  pyarch.h  pybindings_ng.cc  pybindings_ng.h  repl.py  stubgen.py
python/repl/: README.md  __init__.py  _paths.py  _repl.py
python/repl/_console/: __init__.py  _base.py  _plain.py  _rich.py
python/typing-stubs/: README.md  pyproject.toml
python/typing-stubs/nextpnr/: __init__.pyi  ecp5.pyi  types.pyi
